feat: add publish functionality and state management
- implement `handle_event` for publishing events in `gitsweb.hostlive.viewevent`
- update `publish` transition state in `gits.storefront.event`
- modify `host_verified` logic in `edit_event.html.heex` for clarity
- enhance event state display in `view_event.html.heex` with conditional rendering
- simplify modal logic for publishing events in `view_event.html.heex`

--- a/lib/gits_web/live/host_live/edit_event.html.heex
+++ b/lib/gits_web/live/host_live/edit_event.html.heex
@@ -39,7 +39,7 @@
       :if={@live_action == :details}
       form={@form}
       host_id={@host.id}
-      host_verified={not is_nil(@host.verified_at) and @host.state == :verified}
+      host_verified={@host.state == :verified}
       on_next={if(@on_next_path, do: JS.patch(@on_next_path, replace: true), else: "")}
     />
     <.location
