feat: implement refund request functionality
- add `refund_requested` function in `gits.mailer` to handle refund emails
- update `gits.storefront.order` to include refund request logic
- create `orderrefundrequested` and `orderrefunded` notifiers for refund events
- introduce `refundlive` for user interface to request refunds
- add html template for refund request email
- modify `order` schema to include `requested_refund_secret` attribute
- update routes to include refund live view and related actions

this enhances the order management system by allowing users to request refunds, improving user experience and operational efficiency.

--- a/lib/gits_web/live/my_live/orders.html.heex
+++ b/lib/gits_web/live/my_live/orders.html.heex
@@ -7,13 +7,13 @@
       rows={@orders}
       row_click={
         fn row ->
-          JS.patch(Routes.my_orders_path(@socket, :show, row.id)) |> show_modal("orders")
+          JS.navigate(Routes.storefront_event_order_path(@socket, :index, row.event_id, row.id))
         end
       }
     >
-      <:col :let={order} label="Order #">#<%= order.no %></:col>
-      <:col :let={order} label="Date"><%= order.date %></:col>
-      <:col :let={order} optional label="Event"><%= order.event %></:col>
+      <:col :let={order} label="Order #">#{order.no}</:col>
+      <:col :let={order} label="Date">{order.date}</:col>
+      <:col :let={order} optional label="Event">{order.event}</:col>
       <:col :let={_order} label="Status">
         <span
           :if={false}
@@ -31,7 +31,7 @@
           Completed
         </span>
       </:col>
-      <:col :let={order} optional label="Amount"><%= order.amount %></:col>
+      <:col :let={order} optional label="Amount">{order.amount}</:col>
     </.table>
   </div>
 </div>
