--- a/lib/gits_web/components/event_templates/ticket_card.html.heex
+++ b/lib/gits_web/components/event_templates/ticket_card.html.heex
@@ -22,7 +22,7 @@
 </div>
 
 <div class="flex gap-4 w-full">
-  <span class="w-1.5 h-10 self-stretch rounded-full" style={"background-color: #{@color}"}></span>
+  <span class="w-1.5 h-10 rounded-full" style={"background-color: #{@color}"}></span>
   <div class="grow grid">
     <span class="text-sm/5 font-medium">{@name}</span>
     <div :if={assigns[:tags]} class="flex gap-2 text-xs/4 text-zinc-500">
@@ -32,7 +32,7 @@
       <% end %>
     </div>
   </div>
-  <div :if={assigns[:inner_block]}>
+  <div :if={assigns[:inner_block]} class="self-center">
     {render_slot(@inner_block)}
   </div>
 </div>
