feat: add article retrieval and update routes
- implement `get_article_by_id!` in `gits.documentation.articles`
  to fetch articles by id, raising `notfound` if not found.
- update `pagecontroller` to assign articles for `privacy`,
  `terms`, and `contact_us` actions.
- modify routes in `router` to include new paths for
  `contact-us` and update `faq` path.
- enhance article rendering in `article.html.heex`
  to display content dynamically.
- add new markdown files for `contact us` and
  update `privacy policy` content.

--- a/lib/gits_web/controllers/page_html/faq.html.heex
+++ b/lib/gits_web/controllers/page_html/faq.html.heex
@@ -18,10 +18,10 @@
           <dl class="space-y-10">
             <div :for={faq <- @faqs} id={faq.id}>
               <dt class="text-base font-semibold leading-7 text-gray-900">
-                <%= faq.question %>
+                {faq.question}
               </dt>
               <dd class="mt-2 text-base leading-7 text-gray-600">
-                <%= raw(faq.answer) %>
+                {raw(faq.answer)}
               </dd>
             </div>
           </dl>
