--- a/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/event_details.html.heex
@@ -14,6 +14,8 @@
       class="col-span-full"
     />
 
+    <.input field={f[:summary]} label="Summary" type="textarea" class="col-span-full" />
+
     <.input field={f[:starts_at]} label="Start Date" type="datetime-local" />
 
     <.input field={f[:ends_at]} label="End Date" type="datetime-local" />
