--- a/lib/gits_web/live/storefront_live/event_listing.html.heex
+++ b/lib/gits_web/live/storefront_live/event_listing.html.heex
@@ -109,7 +109,7 @@
     </.inputs_for>
     <Gits.Turnstile.widget events={[:success]} appearance="interaction-only" />
 
-    <.button disabled={not @verified?}>
+    <.button variant={:accent} disabled={not @verified?}>
       <span>Get tickets</span>
     </.button>
   </.form>
