--- a/lib/gits_web/components/layouts/root.html.heex
+++ b/lib/gits_web/components/layouts/root.html.heex
@@ -15,7 +15,7 @@
     </script>
   </head>
 
-  <body class="font-poppins min-h-dvh leading-tight antialiased bg-white">
+  <body class="font-poppins min-h-dvh leading-tight antialiased bg-white dark:bg-black">
     {@inner_content}
   </body>
 </html>
