--- a/lib/gits_web/live/host_live/edit_event_templates/media.html.heex
+++ b/lib/gits_web/live/host_live/edit_event_templates/media.html.heex
@@ -1,5 +1,5 @@
 <h2 class="text-lg/7 font-semibold text-zinc-900">Media</h2>
-<p class="mt-1 mb-4 text-sm/5 text-zinc-600"></p>
+<p class="mt-1 mb-4 text-sm/5 text-zinc-600">Choose a poster for the event</p>
 <.form :let={f} for={@form} class="grid gap-6" phx-submit="media" phx-change="validate">
   <div class="grid max-w-screen-lg grid-cols-5 gap-6">
     <div class="overflow-hidden aspect-[3/2] col-span-full lg:col-span-3 rounded-xl bg-zinc-200">
