--- a/lib/gits_web/live/host_live/settings.html.heex
+++ b/lib/gits_web/live/host_live/settings.html.heex
@@ -133,6 +133,46 @@
       <!-- This displayed publicly. -->
     </p>
 
+    <form id="host-form" phx-submit="upload" phx-change="validate">
+      <div class="mt-8 grid grid-cols-[auto_1fr] items-center gap-1 gap-x-4">
+        <span class="col-span-full w-full text-sm font-medium">Upload your logo</span>
+        <div class="size-24 overflow-hidden rounded-xl bg-zinc-200">
+          <%= if Enum.any?(@uploads.logo.entries) do %>
+            <.live_img_preview
+              entry={@uploads.logo.entries |> List.first()}
+              class="h-full w-full object-cover opacity-50"
+            />
+          <% else %>
+            <img
+              src={Gits.Bucket.get_image_url(@host.logo)}
+              alt={@host.name}
+              class="h-full w-full object-cover"
+            />
+          <% end %>
+        </div>
+        <div class="inline-grid gap-4">
+          <label class="inline-flex">
+            <span class="sr-only">Choose logo</span>
+
+            <.live_file_input
+              upload={@uploads.logo}
+              class="w-full text-sm font-medium file:mr-4 file:h-9 file:rounded-lg file:border file:border-solid file:border-zinc-300 file:bg-white file:px-4 file:py-2 hover:file:bg-zinc-50"
+            />
+          </label>
+          <span class="text-sm text-zinc-500">
+            .png, .jpeg, .gif files up to 2MB. Recommended size is 256x256
+          </span>
+        </div>
+        <p :for={err <- upload_errors(@uploads.logo)} class="alert alert-danger">
+          {error_to_string(err)}
+        </p>
+      </div>
+
+      <.button variant={:subtle} class="mt-8">
+        Upload
+      </.button>
+    </form>
+
     <.form
       :let={f}
       for={@form}
@@ -140,7 +180,7 @@
       phx-change="validate"
       phx-submit="submit"
     >
-      <.input field={f[:name]} label="Name" type="text" />
+      <.input field={f[:name]} label="Name" type="text" class="col-span-full" />
       <div class="flex col-span-full gap-6">
         <.button disabled={not @form.changed? or not @form.valid?}><span>Save</span></.button>
         <.button variant={:ghost} type="button" phx-click={JS.dispatch("gits:go_back")}>
