--- a/lib/gits_web/live/my_live/settings.html.heex
+++ b/lib/gits_web/live/my_live/settings.html.heex
@@ -1,11 +1,11 @@
-<h1 class="p-2 mx-auto max-w-screen-xl text-xl font-semibold">Settings</h1>
-<div class="mx-auto pb-16 max-w-screen-xl lg:space-y-16 space-y-4 p-2">
-  <div class="grid gap-8 lg:gap-0 items-start lg:grid-cols-[theme(space.32)_1fr]">
+<h1 class="mx-auto max-w-screen-xl p-2 text-xl font-semibold">Settings</h1>
+<div class="mx-auto max-w-screen-xl space-y-4 p-2 pb-16 lg:space-y-16">
+  <div class="grid items-start gap-8 lg:grid-cols-[theme(space.32)_1fr] lg:gap-0">
     <div class="flex gap-4 lg:grid">
       <.link
         :for={
           {name, icon} <-
-            [{:profile, "i-lucide-user"}, {:partner, "i-lucide-handshake"}]
+            [{:profile, "i-lucide-user"}]
         }
         navigate={Routes.my_settings_path(@socket, name)}
         aria-selected={"#{name == @live_action}"}
@@ -15,17 +15,50 @@
         <span class="font-medium capitalize">{name}</span>
       </.link>
     </div>
-    <div :if={@live_action == :profile} class="mx-auto w-full max-w-screen-sm space-y-8">
-      <div class="size-28 rounded-full bg-zinc-200"></div>
+    <div class="mx-auto w-full max-w-screen-sm space-y-8">
+      <.form for={%{}} phx-change="validate" phx-submit="validate">
+        <div class="flex items-center gap-4">
+          <div class="size-28 overflow-hidden rounded-full bg-zinc-200">
+            <%= if Enum.any?(@uploads.avatar.entries) do %>
+              <.live_img_preview
+                entry={@uploads.avatar.entries |> List.first()}
+                class="h-full w-full object-cover opacity-50"
+              />
+            <% else %>
+              <img
+                src={Gits.Bucket.get_image_url(@current_user.avatar)}
+                alt=""
+                class="h-full w-full object-cover"
+              />
+            <% end %>
+          </div>
+
+          <.button
+            :if={Enum.any?(@uploads.avatar.entries)}
+            type="button"
+            phx-click="upload"
+            variant={:subtle}
+          >
+            <span>Save</span>
+          </.button>
+
+          <p :for={err <- upload_errors(@uploads.avatar)} class="alert alert-danger">
+            {error_to_string(err)}
+          </p>
+        </div>
+
+        <.live_file_input upload={@uploads.avatar} />
+      </.form>
+
       <div class="grid gap-1">
         <span class="text-3xl font-semibold">
           {@current_user.name || "Unknown"}
         </span>
         <span class="text-sm text-zinc-500">{@current_user.email}</span>
       </div>
-      <.form :let={f} for={@form} class="space-y-4" phx-change="validate" phx-submit="submit">
+      <.form :let={f} for={@form} phx-change="validate" phx-submit="submit" class="space-y-4">
         <div class="flex items-center gap-4">
-          <h2 class="text-xl grow font-semibold">Personal details</h2>
+          <h2 class="grow text-xl font-semibold">Personal details</h2>
           <.button variant={:subtle} disabled={not @form.changed? or not @form.valid?}>
             <span>Save</span>
           </.button>
@@ -35,7 +68,7 @@
         </div>
       </.form>
 
-      <div class="space-y-4">
+      <div :if={false} class="space-y-4">
         <h2 class="text-xl font-semibold">Manage account</h2>
         <div class="flex items-center">
           <div class="grow">
@@ -44,7 +77,7 @@
               Permanently delete your GiTS account.
             </p>
           </div>
-          <button class="text-red-500 h-9 font-semibold text-sm/4 hover:bg-red-50 px-4 py-2 rounded-lg">
+          <button class="h-9 rounded-lg px-4 py-2 text-sm/4 font-semibold text-red-500 hover:bg-red-50">
             <span>Delete</span>
           </button>
         </div>
